k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swish-interview
spec:
  selector:
    app: swish-interview
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
