k8s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-env
spec:
  parentRefs:
    - name: external-gateway
      namespace: istio-system
  hostnames:
    - "develop.verses.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: multi-env
          port: 80
